- Switch away from CMS GC to Parallel GC - Make sure heap snapshots are created on OutOfMemoryError in /var/log/haplocheirus - Load the YourKit profiler agent if installed in /usr/local/yjp, with disabled tracing and no probes